update 2/22/2026
retoques
